Add example of doughnut chart from pie classes

--- a/WebCore/Shared/NavMenu.razor
+++ b/WebCore/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-pie-chart" aria-hidden="true"></span> Doughnut
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DoughnutFromPieExample">
+                <span class="oi oi-pie-chart" aria-hidden="true"></span> Doughnut (from Pie)
+            </NavLink>
+        </li>
     </ul>
 </div>
 
