--- a/WebCore/Shared/NavMenu.razor
+++ b/WebCore/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="SimpleLineLinearExample">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Simple Line Linear
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="LineLinearExample">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Linear
             </NavLink>
