Polar area rework (#50)
* Reworked polar area chart.

* Moved axis to common namespace.

* Added polar area scale stuff.

* Adjusted class names to singular. Removed grid lines.

* Fixed imports for line chart.

* Added ticks, minor ticks and major ticks.

* Renamed PieDoughnutAnimation to ArcAnimation.

* Removed font family and string default values.

* Fixed the value indicating whether text in documentation.

* Made Ticks, GridLines, Scales, PointLabels plural classes.

* Made LinearTicks plural, too. Fixed class descriptions where necessary.

* Made classes abstract. renamed AngleLine to plural.

* Fixed spelling and doc errors. Added reference to base class in Ticks comments.

* Updated comment for gridlines.

* Fixed summary of angle line, linear ticks, poin labels.

* Made summary of AngleLines' display plural.

* Fixed summary of ticks in the LinearRadialAxis.

* Renamed LinearTicks to LinearRadialTicks.

* Made LinearRadialTicks properties nullable where needed, added inheritance.

* Fixed documentation of LineHeight in PointLabels.

* Fixed documentation for the Scale in PolarAreaOptions.

* Updated XML documentation once again (Rebuild).

* Undid changes for charts we're not currently reworking.

* Updated naming convention and singular/ plural element descriptions for ticks, grid lines, angle lines and point labels.

* Updated use of abstract classes, fixed documentation in ticks.

* Adjusted ticks labels to tick labels.

* Added missing using directive for ColorUtil in SubTicks.

* Added para to LinearRadialAxis documentation.

* Made ticks abstract again.

* Made see lower case in ticks description.

* Build project -> update XML-doc

* Refactoring, final touch (for this PR)

--- a/WebCore/Pages/DoughnutExample.razor
+++ b/WebCore/Pages/DoughnutExample.razor
@@ -24,7 +24,7 @@
                     Text = "Sample chart from Blazor"
                 },
                 Responsive = true,
-                Animation = new PieDoughnutAnimation
+                Animation = new ArcAnimation
                 {
                     AnimateRotate = true,
                     AnimateScale = true
