--- a/WebCore/Pages/LineLinearExample.razor
+++ b/WebCore/Pages/LineLinearExample.razor
@@ -61,7 +61,7 @@
                             {
                                 LabelString = "Zeit"
                             },
-                            GridLines = new GridLine
+                            GridLines = new GridLines
                             {
                                  Display = false
                             },
