--- a/WebCore/Pages/LineLogarithmicExample.razor
+++ b/WebCore/Pages/LineLogarithmicExample.razor
@@ -55,7 +55,7 @@
                             {
                                 LabelString = "Zeit"
                             },
-                            GridLines = new GridLine
+                            GridLines = new GridLines
                             {
                                  Display = false
                             },
