--- a/WebCore/Pages/PieExample.razor
+++ b/WebCore/Pages/PieExample.razor
@@ -24,7 +24,7 @@
                     Text = "Sample chart from Blazor"
                 },
                 Responsive = true,
-                Animation = new PieDoughnutAnimation
+                Animation = new ArcAnimation
                 {
                     AnimateRotate = true,
                     AnimateScale = true
