Update to Preview8 (#60)
* Updated one missing nuget package to preview8, did necessary changes for preview8.

* Updated package reference from Microsoft.AspNetCore.Components.Browser to *.Web.

* Add missing =, @functions->@code

--- a/WebCore/Pages/LineLinearExample.razor
+++ b/WebCore/Pages/LineLinearExample.razor
@@ -12,10 +12,10 @@
 @inject WeatherForecastService ForecastService
 
 <h2>Line Linear Chart</h2>
-<ChartJsLineChart @ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
+<ChartJsLineChart @ref="lineChartJs" @ref:suppressField Config="@lineChartConfig" Width="600" Height="300" />
 <Button @onclick="@UpdateChart">Add random point</Button>
 
-@functions
+@code
 {
     LineChartConfig lineChartConfig;
     ChartJsLineChart lineChartJs;
@@ -25,7 +25,7 @@
 
     private Random rnd = new Random();
 
-    protected override async Task OnInitAsync()
+    protected override async Task OnInitializedAsync()
     {
         lineChartConfig = new LineChartConfig
         {
