--- a/WebCore/Pages/DoughnutExample.razor
+++ b/WebCore/Pages/DoughnutExample.razor
@@ -5,13 +5,13 @@
 
 <h1>Doughnut Chart</h1>
 
-<ChartJsPieChart @ref="doughnutChartJs" Config="@config" Width="600" Height="300" />
+<ChartJsPieChart @ref="doughnutChartJs" @ref:suppressField Config="@config" Width="600" Height="300" />
 
 @code {
     private PieChartConfig config;
     private ChartJsPieChart doughnutChartJs;
 
-    protected override void OnInit()
+    protected override void OnInitialized()
     {
         config = new PieChartConfig
         {
