--- a/WebCore/Pages/SimpleLineLinearExample.razor
+++ b/WebCore/Pages/SimpleLineLinearExample.razor
@@ -11,10 +11,10 @@
 @using ChartJs.Blazor.Util.Color
 
 <h2>Line Linear Chart</h2>
-<ChartJsLineChart @ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
+<ChartJsLineChart @ref="lineChartJs" @ref:suppressField  Config="@lineChartConfig" Width="600" Height="300" />
 <Button @onclick="@UpdateChart">Add random point</Button>
 
-@functions
+@code
 {
     LineChartConfig lineChartConfig;
     ChartJsLineChart lineChartJs;
@@ -23,7 +23,7 @@
 
     private Random rnd = new Random();
 
-    protected override void OnInit()
+    protected override void OnInitialized()
     {
         lineChartConfig = new LineChartConfig
         {
