Update to preview9 (#75)

--- a/WebCore/Pages/DoughnutExample.razor
+++ b/WebCore/Pages/DoughnutExample.razor
@@ -5,7 +5,7 @@
 
 <h1>Doughnut Chart</h1>
 
-<ChartJsPieChart @ref="doughnutChartJs" @ref:suppressField Config="@config" Width="600" Height="300" />
+<ChartJsPieChart @ref="doughnutChartJs" Config="@config" Width="600" Height="300" />
 
 @code {
     private PieConfig config;
