--- a/WebCore/Pages/LineLinearExample.razor
+++ b/WebCore/Pages/LineLinearExample.razor
@@ -12,8 +12,8 @@
 @inject WeatherForecastService ForecastService
 
 <h2>Line Linear Chart</h2>
-<ChartJsLineChart @ref="lineChartJs" @ref:suppressField Config="@lineConfig" Width="600" Height="300" />
-<Button @onclick="@UpdateChart">Add random point</Button>
+<ChartJsLineChart @ref="lineChartJs" Config="@lineConfig" Width="600" Height="300" />
+<Button @onclick="UpdateChart">Add random point</Button>
 
 @code
 {
