--- a/WebCore/Pages/LineLogarithmicExample.razor
+++ b/WebCore/Pages/LineLogarithmicExample.razor
@@ -12,7 +12,7 @@
 @inject WeatherForecastService ForecastService
 
 <h2>Line Logarithmic Chart</h2>
-<ChartJsLineChart @ref="lineChartJs" @ref:suppressField Config="@lineConfig" Width="600" Height="300" />
+<ChartJsLineChart @ref="lineChartJs" Config="@lineConfig" Width="600" Height="300" />
 
 @code
 {
