--- a/WebCore/Pages/PieExample.razor
+++ b/WebCore/Pages/PieExample.razor
@@ -5,7 +5,7 @@
 
 <h1>Pie Chart</h1>
 
-<ChartJsPieChart @ref="pieChartJs" @ref:suppressField Config="@config" Width="600" Height="300" />
+<ChartJsPieChart @ref="pieChartJs" Config="@config" Width="600" Height="300" />
 
 @code {
     private PieConfig config;
