Implement indexable options (#67)
* Add indexable options + newtonsoft converter

* Use indexable options where appropriate

There are more which will need to be done since I've only done those which were set to a list readonly-property which really bothered me

* Update samples

* Turn IO into struct+equality stuff, adjust uses

* Overload equality operators, add null comment

* Use two properties to (better) avoid boxing

* Improve array equality

* Make it work (test it like a non-idiot)

* Use runtime type for type-check (fix bug)

* Use in IndividualBarChartDataset

* Use in RadarDataset, adjust some defaults

* Handle non-initialized indexable options

* Fix function defaults (onClick & generateLabels) (#70)

* Use correct default onClick handler

* Use correct generateLabels-function

* Add comment about property-access

* Refactor get_default-methods

* Add chart-selection to issue templates. (#69)

* Added selection to which chart this applies to in issue templates.

* Removed lists for chart types from issue templates, added labels.

* Rename 'Custom issue template' to 'Question'

* Update to preview9 (#75)

* Add indexable options + newtonsoft converter

* Use indexable options where appropriate

There are more which will need to be done since I've only done those which were set to a list readonly-property which really bothered me

* Update samples

* Turn IO into struct+equality stuff, adjust uses

* Overload equality operators, add null comment

* Use two properties to (better) avoid boxing

* Improve array equality

* Make it work (test it like a non-idiot)

* Use runtime type for type-check (fix bug)

* Use in IndividualBarChartDataset

* Use in RadarDataset, adjust some defaults

* Handle non-initialized indexable options

* Make indexable-option a class

* non-defined = undefined

* Don't use Nullable<> since it's a class now

--- a/WebCore/Pages/DoughnutExample.razor
+++ b/WebCore/Pages/DoughnutExample.razor
@@ -34,14 +34,15 @@
 
         config.Data.Labels.AddRange(new[] { "A", "B", "C", "D" });
 
-        var doughnutSet = new PieDataset();
-
-        doughnutSet.BackgroundColor.AddRange(new List<string> { "#ff6384", "#55ee84", "#4463ff", "#efefef" });
-        doughnutSet.BorderWidth.Add(0);
-        doughnutSet.HoverBackgroundColor.AddRange(new List<string> { "#f06384" });
-        doughnutSet.HoverBorderColor.AddRange(new List<string> { "#f06384" });
-        doughnutSet.HoverBorderWidth.Add(1);
-        doughnutSet.BorderColor.AddRange(new List<string> { "#ffffff", "#ffffff", "#ffffff", "#ffffff" });
+        var doughnutSet = new PieDataset()
+        {
+            BackgroundColor = new[] { "#ff6384", "#55ee84", "#4463ff", "#efefef" },
+            BorderWidth = 0,
+            HoverBackgroundColor = "#f06384",
+            HoverBorderColor = "#f06384",
+            HoverBorderWidth = 1,
+            BorderColor = "#ffffff"
+        };
 
         doughnutSet.Data.AddRange(new List<double> { 4, 5, 6, 7 });
         config.Data.Datasets.Add(doughnutSet);
