--- a/WebCore/Pages/PieExample.razor
+++ b/WebCore/Pages/PieExample.razor
@@ -2,6 +2,7 @@
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.PieChart
 @using ChartJs.Blazor.ChartJS.Common.Properties
+@using ChartJs.Blazor.Util.Color
 
 <h1>Pie Chart</h1>
 
@@ -34,14 +35,15 @@
 
         config.Data.Labels.AddRange(new[] { "A", "B", "C", "D" });
 
-        var pieSet = new PieDataset();
-
-        pieSet.BackgroundColor.AddRange(new List<string> { "#ff6384", "#55ee84", "#4463ff", "#efefef" });
-        pieSet.BorderWidth.Add(0);
-        pieSet.HoverBackgroundColor.AddRange(new List<string> { "#f06384" });
-        pieSet.HoverBorderColor.AddRange(new List<string> { "#f06384" });
-        pieSet.HoverBorderWidth.Add(1);
-        pieSet.BorderColor.AddRange(new List<string> { "#ffffff", "#ffffff", "#ffffff", "#ffffff" });
+        var pieSet = new PieDataset()
+        {
+            BackgroundColor = new[] { "#ff6384", "#55ee84", "#4463ff", "#efefef" },
+            BorderWidth = 0,
+            HoverBackgroundColor = "#f06384",
+            HoverBorderColor = "#f06384",
+            HoverBorderWidth = 1,
+            BorderColor = "#ffffff",
+        };
 
         pieSet.Data.AddRange(new List<double> { 4, 5, 6, 7 });
         config.Data.Datasets.Add(pieSet);
