Add polar area example. (#80)
* Updated to preview9.

* Added polar area example.

* Adjusted lists to arrays.

* Fixed issue that doubles couldn't be automatically detected.

* Adjusted NavMenu in example project.

* Use explicit double array

--- a/WebCore/Pages/DoughnutExample.razor
+++ b/WebCore/Pages/DoughnutExample.razor
@@ -43,7 +43,7 @@
             BorderColor = "#ffffff"
         };
 
-        doughnutSet.Data.AddRange(new List<double> { 4, 5, 6, 7 });
+        doughnutSet.Data.AddRange(new double[] { 4, 5, 6, 7 });
         config.Data.Datasets.Add(doughnutSet);
     }
 }}
