--- a/WebCore/Pages/PieExample.razor
+++ b/WebCore/Pages/PieExample.razor
@@ -44,7 +44,7 @@
             BorderColor = "#ffffff",
         };
 
-        pieSet.Data.AddRange(new List<double> { 4, 5, 6, 7 });
+        pieSet.Data.AddRange(new double[] { 4, 5, 6, 7 });
         config.Data.Datasets.Add(pieSet);
     }
 }
