--- a/WebCore/Shared/NavMenu.razor
+++ b/WebCore/Shared/NavMenu.razor
@@ -14,22 +14,22 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="SimpleLineLinearExample">
-                <span class="oi oi-bar-chart" aria-hidden="true"></span> Simple Line Linear
+                <span class="oi oi-graph" aria-hidden="true"></span> Simple Line Linear
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="LineLinearExample">
-                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Linear
+                <span class="oi oi-graph" aria-hidden="true"></span> Line Linear
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="LineLogarithmicExample">
-                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Logarithmic
+                <span class="oi oi-graph" aria-hidden="true"></span> Line Logarithmic
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="LineTimeExample">
-                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Time
+                <span class="oi oi-graph" aria-hidden="true"></span> Line Time
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -40,6 +40,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="DoughnutExample">
                 <span class="oi oi-pie-chart" aria-hidden="true"></span> Doughnut (from Pie)
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PolarAreaExample">
+                <span class="oi oi-graph" aria-hidden="true"></span> Polar Area
             </NavLink>
         </li>
     </ul>
