Code style and spelling fixes, updated index page. (#81)
* Code style and spelling fixes, updated index page.

* Adjusted namespaces in ColorUtil.

* Fixed brackets in WeatherForecastService.

* Fixed more spelling issues.

--- a/WebCore/Pages/DoughnutExample.razor
+++ b/WebCore/Pages/DoughnutExample.razor
@@ -33,7 +33,7 @@
 
         config.Data.Labels.AddRange(new[] { "A", "B", "C", "D" });
 
-        var doughnutSet = new PieDataset()
+        var doughnutSet = new PieDataset
         {
             BackgroundColor = new[] { "#ff6384", "#55ee84", "#4463ff", "#efefef" },
             BorderWidth = 0,
