--- a/WebCore/Pages/LineTimeExample.razor
+++ b/WebCore/Pages/LineTimeExample.razor
@@ -2,7 +2,6 @@
 @using WebCore.Data
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS
-@using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.ChartJS.Common.Enums
 @using ChartJs.Blazor.ChartJS.Common.Legends
@@ -97,7 +96,7 @@
 
         var forecasts = await ForecastService.GetForecastAsync(DateTime.Now, 2);
 
-        var tempDataSet = new LineDataset<TimeTupel<int>>
+        var tempDataSet = new LineDataset<TimeTuple<int>>
         {
             BackgroundColor = "#ff6384",
             BorderColor = "#ff6384",
@@ -109,7 +108,7 @@
             SteppedLine = SteppedLine.False
         };
 
-        tempDataSet.AddRange(forecasts.Select(p => new TimeTupel<int>(new Moment(p.Date), p.TemperatureC)));
+        tempDataSet.AddRange(forecasts.Select(p => new TimeTuple<int>(new Moment(p.Date), p.TemperatureC)));
         lineConfig.Data.Datasets.Add(tempDataSet);
     }
 
