--- a/WebCore/Pages/_Host.cshtml
+++ b/WebCore/Pages/_Host.cshtml
@@ -40,7 +40,7 @@
         You have to actually use "_content/ChartJs.Blazor/" for it to work correctly. This might change in a later preview.
 
         Currently there are some issues with this (at least in server-side blazor).
-        It doesn't always work and the static files arent accessable.
+        It doesn't always work and the static files aren't accessible.
         Theses issues will hopefully be resolved in the upcoming .net previews.
     *@
 
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="_content/ChartJs.Blazor/ChartJsBlazor.css" />
     *@
 
-    @* Manually include because it doesn't work with server sider blazor *@
+    @* Manually include because it doesn't work with server side blazor *@
     <script src="~/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
     <link rel="stylesheet" href="~/ChartJs.Blazor/ChartJSBlazor.css" />
 </body>
