--- a/WebCore/Pages/Index.razor
+++ b/WebCore/Pages/Index.razor
@@ -1,5 +1,13 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>This is an example project to show off our nice charts.</h1>
 
-Welcome to your new app.
+<ul>
+    <li>
+        If you want to read more, visit the <a href="https://github.com/Joelius300/ChartJSBlazor/wiki">wiki page</a>, please.
+    </li>
+    <li>
+        We really like people helping us with the project.
+        Nevertheless, take your time to read our <a href="https://github.com/Joelius300/ChartJSBlazor/blob/master/CONTRIBUTING.md">contributing guidelines</a>.
+    </li>
+</ul>
