Implemented missing special enums. (#87)
* Implemented all special enums.

* Fixed missing space in border cap style.

* CubicInterpolationMode: Moved documentation summary to the class summary.

* Removed para links from property documentation of special enums.

* Made all enum types singular.

* Fixed missing space at PointStyle class.

* Removed all CSS font-styles and CSS font-family options mentions in code comments.

* Fixed comments with enum types.

* Removed usage of default values.

* Made all missing special enums sealed.

* Updated XML doc.

* Fixed CubicInterpolationMode.

* Final touch

* Improve documentation for font style

--- a/WebCore/Pages/LineLogarithmicExample.razor
+++ b/WebCore/Pages/LineLogarithmicExample.razor
@@ -33,7 +33,7 @@
                 },
                 Legend = new Legend
                 {
-                    Position = Positions.Right,
+                    Position = Position.Right,
                     Labels = new LegendLabelConfiguration
                     {
                         UsePointStyle = true
