--- a/WebCore/Pages/SimpleLineLinearExample.razor
+++ b/WebCore/Pages/SimpleLineLinearExample.razor
@@ -35,7 +35,7 @@
                 },
                 Legend = new Legend
                 {
-                    Position = Positions.Right,
+                    Position = Position.Right,
                     Labels = new LegendLabelConfiguration
                     {
                         UsePointStyle = true
