--- a/WebCore/Pages/LineLinearExample.razor
+++ b/WebCore/Pages/LineLinearExample.razor
@@ -39,7 +39,7 @@
                 },
                 Legend = new Legend
                 {
-                    Position = Positions.Right,
+                    Position = Position.Right,
                     Labels = new LegendLabelConfiguration
                     {
                         UsePointStyle = true
