--- a/WebCore/Pages/LineTimeExample.razor
+++ b/WebCore/Pages/LineTimeExample.razor
@@ -50,7 +50,7 @@
                 },
                 Legend = new Legend
                 {
-                    Position = Positions.Right,
+                    Position = Position.Right,
                     Labels = new LegendLabelConfiguration
                     {
                         UsePointStyle = true
