Rework bar chart. (#86)
* Reworked bar chart.

* Fixed all current issues in the bar chart rework.

* Removed bar data class in example project.

* Adjusted example to use double wrapper.

* Adjusted example a bit more: Added axis.

* Use ChartType (singular), update xml-docs

* Move common files, adjust namespaces

* Update everything bar axes related

* Use List, complete bar dataset

* Typo, remove automatic stack-id, add examples

--- a/WebCore/Pages/LineLinearExample.razor
+++ b/WebCore/Pages/LineLinearExample.razor
@@ -6,8 +6,8 @@
 @using ChartJs.Blazor.ChartJS.Common.Enums
 @using ChartJs.Blazor.ChartJS.Common.Legends
 @using ChartJs.Blazor.ChartJS.LineChart
-@using ChartJs.Blazor.ChartJS.LineChart.Axes
-@using ChartJs.Blazor.ChartJS.LineChart.Axes.Ticks
+@using ChartJs.Blazor.ChartJS.Common.Axes
+@using ChartJs.Blazor.ChartJS.Common.Axes.Ticks
 @using ChartJs.Blazor.Util
 @inject WeatherForecastService ForecastService
 
