--- a/WebCore/Shared/NavMenu.razor
+++ b/WebCore/Shared/NavMenu.razor
@@ -47,6 +47,21 @@
                 <span class="oi oi-graph" aria-hidden="true"></span> Polar Area
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="SimpleBarExample">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Simple Bar
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="BarTimeExample">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Bar Time
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="BarStackedExample">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Bar Stacked
+            </NavLink>
+        </li>
     </ul>
 </div>
 
