Improved the samples

--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/_Imports.razor
@@ -6,5 +6,6 @@
 @using ChartJs.Blazor.Sample.ClientSide
 @using ChartJs.Blazor.Sample.ClientSide.Shared
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
+@using ChartJs.Blazor.Sample.Shared.Components.LineChart;
 @using ChartJs.Blazor;
 @using ChartJs.Blazor.Sample;
