--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Shared/NavMenu.razor
@@ -18,13 +18,23 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="SimpleBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Simple BarChart
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="SimpleBarChart">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Simple BarChart
+            <NavLink class="nav-link" href="StackedBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>StackedBarChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="TimeBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Time BarChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="LinearLineChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Linear LineChart
             </NavLink>
         </li>
     </ul>
