--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using ChartJs.Blazor.Sample.ServerSide
 @using ChartJs.Blazor.Sample.Shared.Components.BarCharts;
+@using ChartJs.Blazor.Sample.Shared.Components.LineChart;
