--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -27,6 +27,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Simple BarChart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="StackedBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Stacked BarChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="TimeBarChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Time BarChart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="LinearLineChart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Linear LineChart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
